modified scroll breakpoints in index.js -> attempting to fix buggy behavior on mobile

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -26,7 +26,6 @@ header {
 }
 
 .header-slide {
-  background-position: -99.5% 0;
   color: white !important;
 }
 
@@ -62,7 +61,7 @@ header {
 }
 
 .scale {
-  scale: 98%;
+  scale: 95%;
 }
 
 footer {
